Dashboard Implementation Started

--- a/client/src/components/login/Login.scss
+++ b/client/src/components/login/Login.scss
@@ -5,7 +5,9 @@
 *:after {
   box-sizing: inherit;
 }
-
+.error {
+  margin-top: 64px;
+}
 .login_container {
   display: flex;
   align-items: center;
