--- a/client/src/components/login/Login.scss
+++ b/client/src/components/login/Login.scss
@@ -5,9 +5,51 @@
 *:after {
   box-sizing: inherit;
 }
+#light {
+  margin-left: -47px;
+  position: relative;
+  top: -89px;
+}
+#lineh1 {
+  position: absolute;
+  left: 0;
+  height: 10px;
+  background: #5500aa;
+  animation: lineH 4s 5s infinite linear;
+}
+#lineh2 {
+  position: absolute;
+  left: 0;
+  top: 40px;
+  height: 10px;
+  background: #aa2b00;
+  animation: lineH 5s 0.5s infinite linear;
+}
+@keyframes lineH {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 95%;
+    opacity: 0;
+  }
+}
+h1 {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+p.errorlogin {
+  margin: -16px 0 -45px 65px;
+}
 .error {
   margin-top: 64px;
 }
+.errorem {
+  line-height: 0rem;
+  font-size: 13px;
+}
+
 .login_container {
   display: flex;
   align-items: center;
@@ -282,14 +324,6 @@ $space-size-6: $space-size * 6;
 $space-size-7: $space-size * 7;
 $space-size-8: $space-size * 8;
 
-h1 {
-  font-size: 24px;
-  flex-grow: 1;
-  flex-shrink: 1;
-  display: flex;
-  width: 100%;
-  padding: 0px 0 56px 0;
-}
 .container {
   width: 300px;
   margin: auto;
@@ -605,30 +639,6 @@ h1 {
   font-size: 1rem;
   line-height: 1.2rem;
   font-weight: 700;
-}
-
-.cyberpunk1:before,
-.cyberpunk2:before,
-.cyberpunk3:before,
-.cyberpunk4:before {
-  content: "";
-  display: block;
-  position: absolute;
-  bottom: 0px;
-  left: 2px;
-  width: 100%;
-  height: 10px;
-  background-color: #000;
-  // clip-path: polygon(
-  //   0px 0px,
-  //   85px 0px,
-  //   90px 5px,
-  //   100% 5px,
-  //   100% 6px,
-  //   85px 6px,
-  //   80px 10px,
-  //   0px 10px
-  // );
 }
 
 .cyberpunk1.glitched {
