--- a/client/src/components/dashboard/Dashboard.css
+++ b/client/src/components/dashboard/Dashboard.css
@@ -590,3 +590,98 @@ textarea {
   background: none;
   cursor: pointer;
 }
+
+ 
+.display-none{
+  display: none;
+
+}
+.display-block{
+  display: block;
+  z-index: 1;
+}
+.delete-modal{
+  display: flex;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  padding-top: 100px;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+  -webkit-transition: 0.5s;
+  overflow: auto;
+  transition: all 0.3s linear;
+  align-items: center;
+  justify-content: center;
+}
+.delete-modal-options{
+  text-align: center;
+}
+#delete-button{
+  margin: 17px;
+  border: none;
+  background: none;
+}
+.delete-modal-option{
+  font-size: 18px;
+  padding: 5px;
+  margin: 5px;
+  border-radius: 2px;
+
+}
+.delete-modal-yes{
+  background-color: #e8615a;
+}
+.delete-modal-yes:hover , .delete-modal-yes:focus {
+  scale: 1.2;
+}
+.delete-modal-no{
+  background-color:  #2be4ea;
+}
+.delete-modal-no:hover , .delete-modal-no:focus{
+  scale: 1.2;
+}
+.inner-delete-modal{
+  font-size: 20px;
+  border: 1px solid #e8615a;
+  border-radius: 20px;
+  background-color: rgb(0, 0, 0);
+  height: 200px;
+  width: 500px;
+  padding : 40px ;
+  color:#2be4ea;
+}
+.delete-success-message{
+  font-size: 12px;
+  border: 1px solid #e8615a;
+  border-radius: 20px;
+  background-color: rgb(0, 0, 0);
+  padding : 10px ;
+  color:#2be4ea;
+}
+.close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  opacity: 0.7;
+
+}
+.close:hover {
+  opacity: 1;
+}
+.close:before, .close:after {
+  position: absolute;
+  content: ' ';
+  height: 20px;
+  width: 2px;
+  background-color: #e8615a;
+}
+.close:before {
+  transform: rotate(45deg);
+}
+.close:after {
+  transform: rotate(-45deg);
+}
