--- a/client/src/components/settings/Settings.scss
+++ b/client/src/components/settings/Settings.scss
@@ -50,9 +50,6 @@
   
 }
 
-
-
-
 .sidebar button:focus  { 
   background: #461616;
   color:  #2be4ea;
@@ -109,4 +106,11 @@ tr > td:nth-child(1){
 	background-color: black;
 	border-left: #960000 3px solid;
 	border-right: #960000 3px solid;
+}
+.display-none{
+  display: none;
+
+}
+.display-block{
+  display: block;
 }
