loader change implemented

--- a/client/src/components/login/Login.scss
+++ b/client/src/components/login/Login.scss
@@ -970,5 +970,5 @@ em {
     -webkit-box-shadow: 0 0 0 30px  #0F1020 inset !important;
 }
 .editor-field__input:-webkit-autofill{
-  -webkit-text-fill-color: #5E5F84 !important;
+  -webkit-text-fill-color: #b3b5d2 !important;
 }
