--- a/client/src/components/dashboard/Dashboard.css
+++ b/client/src/components/dashboard/Dashboard.css
@@ -1,64 +1,3 @@
-* {
-  box-sizing: border-box;
-  position: relative;
-}
-
-html,
-body {
-  --colors-bg--300: #1e181e;
-  --colors-bg--500: #191a1e;
-  --colors-primary--200: #f4908b;
-  --colors-primary--300: #ea6f69;
-  --colors-primary--500: #e8615a;
-  --colors-primary--600: #9c3230;
-  --colors-primary--700: #5e2122;
-  --colors-primary--800: #451717;
-  --colors-primary--900: #3c181a;
-  --colors-secondary--500: #2be4ea;
-  --colors-secondary--900: #295459;
-  --colors-tertiary--500: #fed33f;
-  --colors-on_bg--500: var(--colors-primary--500);
-  --colors-on_tertiary--500: var(--colors-bg--300);
-  --colors-on_primary--500: var(--colors-primary--200);
-  --colors-active--500: #2bfea0;
-  --fonts-primary: "Rajdhani", sans-serif;
-  --fonts-secondary: "VT323", monospace;
-  --ui-glow: 0 0 5px var(--colors-primary--500);
-  --ui-glow-borders--500: 0 0 3px var(--colors-primary--500);
-  --ui-glow-color: currentcolor;
-  --ui-glow-text: -9px -6px 40px var(--ui-glow-color);
-  --ui-glow-text--dimmed: -9px -6px 40px var(--ui-glow-color);
-  --ui-elevation--1: 2px 2px 0 rgba(0, 0, 0, 0.8);
-  --ui-notch-amount: 1rem;
-  --ui-notch-hypotenuse: 22.627416px; /* hypothenuse of --ui-notch-amount */
-  --ui-notch-path: polygon(
-    0 0,
-    100% 0,
-    100% calc(100% - var(--ui-notch-amount) + 2px),
-    calc(100% - var(--ui-notch-amount) + 2px) 100%,
-    0 100%
-  );
-
-  background-color: var(--colors-bg--500);
-  background-image: radial-gradient(
-    ellipse at 33% 10%,
-    #461616 0%,
-    transparent 75%
-  );
-  background-repeat: no-repeat;
-  color: var(--colors-on_bg--500);
-  font-family: var(--fonts-primary);
-  font-size: 100%;
-  line-height: 1.4;
-  margin: 0;
-  min-height: 100vh;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 .app-skeleton {
   padding: 0 1rem;
   height: 100vh;
@@ -135,7 +74,7 @@ a {
 }
 
 .nav-section__title {
-  color: #2be4ea;
+  color:  var(--colors-secondary--500);
   font-size: 1rem;
   margin: 0;
 }
@@ -224,8 +163,7 @@ a {
   margin-left: 0.75rem;
 }
 
-.conversation-link__icon {
-}
+
 
 .conversation-link__icon::after {
   background-color: var(--colors-primary--500);
@@ -577,7 +515,7 @@ textarea {
   text-align: right;
 }
 .deleteIcon {
-  color: #e8615a;
+  color:  var(--colors-primary--500);
   padding: 0 0 0 10px;
   border: none;
   background: none;
@@ -585,7 +523,7 @@ textarea {
   font-size: 15px;
 }
 .updateIcon {
-  color: #2be4ea;
+  color:  var(--colors-secondary--500);
   padding: 0;
   border: none;
   background: none;
@@ -629,8 +567,8 @@ textarea {
 }
 .delete-modal-option{
   background: transparent;
-  border: 1px solid  #e8615a;
-  color:  #e8615a;
+  border: 1px solid   var(--colors-primary--500);
+  color:   var(--colors-primary--500);
   font-size: 18px;
   padding: 5px;
   margin: 5px;
@@ -642,26 +580,26 @@ textarea {
   transform: scale(1.2);
 }
 .delete-p{
-  color: #e8615a;
+  color:  var(--colors-primary--500);
 }
 
 .inner-delete-modal{
   font-size: 20px;
-  border: 1px solid #e8615a;
+  border: 1px solid  var(--colors-primary--500);
   border-radius: 20px;
   background-color: rgb(0, 0, 0);
   height: 200px;
   width: 500px;
   padding : 40px ;
-  color:#2be4ea;
+  color: var(--colors-secondary--500);
 }
 .delete-success-message{
   font-size: 12px;
-  border: 1px solid #e8615a;
+  border: 1px solid  var(--colors-primary--500);
   border-radius: 20px;
   background-color: rgb(0, 0, 0);
   padding : 10px ;
-  color:#2be4ea;
+  color: var(--colors-secondary--500);
 }
 .close {
   position: absolute;
@@ -678,7 +616,7 @@ textarea {
   content: ' ';
   height: 20px;
   width: 2px;
-  background-color: #e8615a;
+  background-color:  var(--colors-primary--500);
 }
 .close:before {
   transform: rotate(45deg);
