--- a/client/src/components/loader/Loader.scss
+++ b/client/src/components/loader/Loader.scss
@@ -16,7 +16,7 @@
   }
   
   .glitch {
-    color: #e8615a;
+    color:  var(--colors-primary--500);
     position: relative;
     font-size: 6vw;
     // margin: 70px 200px;
@@ -27,7 +27,7 @@
     content: attr(data-text);
     position: absolute;
     left: -2px;
-    text-shadow: -5px 0 #2be4ea;
+    text-shadow: -5px 0  var(--colors-secondary--500);
     overflow: hidden;
     top: 0;
     animation: noise-1 3s linear infinite alternate-reverse, glitch 5s 5.05s infinite;
@@ -37,7 +37,7 @@
     content: attr(data-text);
     position: absolute;
     left: 2px;
-    text-shadow: -5px 0 #2be4ea;
+    text-shadow: -5px 0  var(--colors-secondary--500);
     overflow: hidden;
     top: 0;
     animation: noise-2 3s linear infinite alternate-reverse, glitch 5s 5s infinite;
